<resources>
    <string name="app_name">Laboratorium</string>
    <string name="header_name">Menu Główne</string>
    <string name="button_1">Formularz Studenta</string>
    <string name="button_2">Phone DB</string>
    <string name="button_3">Pobieranie Pliku</string>
    <string name="header_form">Formularz</string>
    <string name="label_first_name">Imię:</string>
    <string name="hint_first_name">Wpisz imię</string>
    <string name="label_last_name">Nazwisko:</string>
    <string name="hint_last_name">Wpisz nazwisko</string>
    <string name="label_grades_number">Liczba ocen:</string>
    <string name="hint_grades_number">Wpisz liczbę ocen</string>
    <string name="submit_button">Oceny</string>
    <string name="error_first_name">Imię nie może być puste</string>
    <string name="error_last_name">Nazwisko nie może być puste</string>
    <string name="error_grades_number">Liczba ocen nie może być pusta</string>
    <string name="error_grades_range">Liczba ocen musi być w przedziale [5–15]</string>
    <string name="error_invalid_number">Wprowadź poprawną liczbę</string>
    <string name="header_grades">Oceny</string>
    <string-array name="subjects">
        <item>Programowanie w języku Java</item>
        <item>Algorytmy i struktury danych</item>
        <item>Systemy operacyjne</item>
        <item>Bazy danych</item>
        <item>Inżynieria oprogramowania</item>
        <item>Sieci komputerowe</item>
        <item>Sztuczna inteligencja</item>
        <item>Teoria obliczeń</item>
        <item>Bezpieczeństwo komputerowe</item>
        <item>Programowanie aplikacji mobilnych</item>
        <item>Programowanie w języku C++</item>
        <item>Grafika komputerowa</item>
        <item>Programowanie w języku Python</item>
        <item>Chmura obliczeniowa</item>
        <item>Robotyka</item>
    </string-array>
    <string name="label_grades">Wprowadź oceny:</string>
    <string name="calculate_button">Oblicz średnią</string>
    <string name="toast_all_subjects_required">Proszę ocenić wszystkie przedmioty</string>
    <string name="average_placeholder">Średnia ocen: %1$.2f</string>
    <string name="end_button_good">Super :)</string>
    <string name="end_button_bad">Tym razem mi nie poszło</string>
    <string name="toast_congratulations">Gratulacje! Otrzymujesz zaliczenie!</string>
    <string name="toast_conditional_pass">Wysyłam podanie o zaliczenie warunkowe</string>
    <string name="header_database">Phone DB</string>
    <string name="clean_all_data">Wyczyść wszystkie dane</string>
    <string name="header_addphone">Dodaj telefon</string>
    <string name="phone_brand">Marka</string>
    <string name="phone_name">Model</string>
    <string name="android_version">Wersja Androida</string>
    <string name="web_site">Strona internetowa</string>
    <string name="www_page">Strona WWW</string>
    <string name="cancel">Anuluj</string>
    <string name="save">Zapisz</string>
    <string name="enter_brand">Podaj markę</string>
    <string name="enter_model">Podaj nazwę</string>
    <string name="enter_version">Podaj numer wersji</string>
    <string name="enter_address">Podaj adres</string>
    <string name="more_options">Więcej opcji</string>
    <string name="phones_list">Lista telefonów</string>
    <string name="add_phone">Dodaj telefon</string>
    <string name="header_editphone">Edytuj telefon</string>
    <string name="header_filedownload">Pobieranie pliku</string>
    <string name="url_label">URL:</string>
    <string name="url_input_example">https://example.com/plik.zip</string>
    <string name="url_input">https://cdn.kernel.org/pub/linux/kernel/v6.x/linux-6.12.24.tar.xz</string>
    <string name="get_info_button">Pobierz informacje</string>
    <string name="file_size_label">Rozmiar pliku:</string>
    <string name="file_size_value">0 bajtów</string>
    <string name="file_type_label">Typ pliku:</string>
    <string name="file_type_value">nieznany</string>
    <string name="download_button">Pobierz</string>
    <string name="bytes_downloaded_label">Pobrano bajtów:</string>
    <string name="bytes_downloaded_value">0 bajtów</string>
    <string name="button_4">AndPaint</string>
    <string name="header_drawing">AndPaint!</string>
    <string name="clear_button_text">X</string>
    <string name="choose_red">Wybierz kolor czerwony</string>
    <string name="choose_yellow">Wybierz kolor żółty</string>
    <string name="choose_green">Wybierz kolor zielony</string>
    <string name="choose_blue">Wybierz kolor niebieski</string>
    <string name="clear_button_desc">Usuń zawartość rysunku</string>
    <string name="save_image_option">Zapisz obraz</string>
    <string name="browse_image_option">Przeglądaj obrazy</string>
    <string name="file_size"> %1$d bajtów </string>
    <string name="file_size_unknown"> 0 bajtów </string>
    <string name="bytes_downloaded"> %1$d / %2$d bajtów </string>
    <string name="image_preview_description">Podgląd wybranego obrazka z galerii</string>
</resources>