<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Nagłówek -->
            <TextView
                android:id="@+id/header"
                android:layout_width="0dp"
                android:layout_height="135dp"
                android:background="@color/fileDownloadColor"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/header_filedownload"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Toolbar -->
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/transparent"
                app:titleTextColor="@android:color/white"
                app:navigationIcon="@drawable/ic_back"
                android:layout_marginTop="36dp"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- URL i pole -->
            <TextView
                android:id="@+id/url_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/url_label"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/header"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="32dp"
                android:layout_marginStart="16dp" />

            <EditText
                android:id="@+id/url_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/url_input_example"
                android:inputType="textUri"
                android:minHeight="48dp"
                android:padding="12dp"
                android:text="@string/url_input"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@id/url_label"
                app:layout_constraintTop_toBottomOf="@+id/header" />

            <Button
                android:id="@+id/get_info_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/get_info_button"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@id/url_input"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <!-- Rozmiar pliku -->
            <TextView
                android:id="@+id/file_size_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/file_size_label"
                android:textSize="16sp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toBottomOf="@id/get_info_button"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/file_size_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/file_size_value"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="180dp"
                app:layout_constraintTop_toBottomOf="@id/get_info_button"
                app:layout_constraintStart_toStartOf="parent" />

            <!-- Typ pliku -->
            <TextView
                android:id="@+id/file_type_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/file_type_label"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toBottomOf="@id/file_size_label"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/file_type_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/file_type_value"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="180dp"
                app:layout_constraintTop_toBottomOf="@id/file_size_value"
                app:layout_constraintStart_toStartOf="parent" />

            <!-- Przycisk "Pobierz plik" -->
            <Button
                android:id="@+id/download_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/download_button"
                android:layout_marginTop="24dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@id/file_type_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <!-- Info o bajtach -->
            <TextView
                android:id="@+id/bytes_downloaded_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bytes_downloaded_label"
                android:textSize="16sp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toBottomOf="@id/download_button"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/bytes_downloaded_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bytes_downloaded_value"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="180dp"
                app:layout_constraintTop_toBottomOf="@id/download_button"
                app:layout_constraintStart_toStartOf="parent" />

            <!-- Pasek postępu -->
            <ProgressBar
                android:id="@+id/download_progress_bar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:max="100"
                android:progress="0"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="32dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@id/bytes_downloaded_value"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>