<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <!-- Nagłówek -->
        <TextView
            android:id="@+id/header"
            android:layout_width="0dp"
            android:layout_height="135dp"
            android:layout_marginTop="0dp"
            android:background="@color/menuColor"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/header_name"
            android:textColor="@color/white"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Przycisk 1 -->
        <Button
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_margin="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/button_1"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header" />

        <!-- Przycisk 2 -->
        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_margin="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/button_2"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button1" />

        <!-- Przycisk 3 -->
        <Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_margin="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/button_3"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button2" />

        <!-- Przycisk 4 -->
        <Button
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_margin="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/button_4"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button3" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
